k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foodmission
  labels:
    name: foodmission
    app.kubernetes.io/name: foodmission-data-framework
    app.kubernetes.io/component: namespace
